--- a/WpfApp1/View/PatientView.xaml
+++ b/WpfApp1/View/PatientView.xaml
@@ -23,6 +23,9 @@
         <!-- 뒤로 가기 버튼 -->
         <Button Content="뒤로 가기" Click="GoBackButton_Click" HorizontalAlignment="Left" Margin="0,0,0,10"/>
 
+        <!-- 환자 추가 버튼 -->
+        <Button Content="환자 추가" Click="AddPatientClick" HorizontalAlignment="Right" Margin="0,0,0,10"/>
+
         <!-- 환자 목록 및 상세 정보 -->
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
