의사, 환자 데이터 영구 삭제 및 로직 삭제 기능 구현

--- a/WpfApp1/View/PatientView.xaml
+++ b/WpfApp1/View/PatientView.xaml
@@ -100,11 +100,20 @@
                     Margin ="10"/>
 
             <!-- 삭제 버튼 -->
-            <Button Content ="삭제"
-                    Command="{Binding DeletePatientCommand}"
-                    CommandParameter="{Binding SelectedPatient}"
-                    Width ="100"
-                    Margin ="10"/>
+            <Button Content="비활성화" 
+                Command="{Binding SoftDeletePatientCommand}"
+                CommandParameter="{Binding SelectedPatient}"
+                Width="100"
+                Margin="10"
+                Background="#FFD3D3D3"/>
+            <!-- 영구 삭제 버튼 추가 -->
+            <Button Content="영구 삭제" 
+                Command="{Binding HardDeletePatientCommand}"
+                CommandParameter="{Binding SelectedPatient}"
+                Width="100"
+                Margin="10"
+                Foreground="White"
+                Background="Red"/>
         </StackPanel>
     </Grid>
     
