--- a/WpfApp1/View/DoctorView.xaml
+++ b/WpfApp1/View/DoctorView.xaml
@@ -106,11 +106,20 @@
                     Margin ="10"/>
 
             <!-- 삭제 버튼 -->
-            <Button Content ="삭제"
-                    Command="{Binding DeleteDoctorCommand}"
-                    CommandParameter="{Binding SelectedDoctor}"
-                    Width ="100"
-                    Margin ="10"/>
+            <Button Content="비활성화" 
+                Command="{Binding SoftDeleteDoctorCommand}"
+                CommandParameter="{Binding SelectedDoctor}"
+                Width="100"
+                Margin="10"
+                Background="#FFD3D3D3"/>
+            <!-- 영구 삭제 버튼 추가 -->
+            <Button Content="영구 삭제" 
+                Command="{Binding HardDeleteDoctorCommand}"
+                CommandParameter="{Binding SelectedDoctor}"
+                Width="100"
+                Margin="10"
+                Foreground="White"
+                Background="Red"/>
         </StackPanel>
     </Grid>
 </Window>
